[tool.poetry]
name = "wt-profile-tool"
version = "0.1.0"
description = ""
authors = ["axiangcoding <axiangcoding@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.5.3"
bbpb = "^1.1.0"
loguru = "^0.7.2"



[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
