[tool.poetry]
name = "wt-profile-tool"
version = "0.4.0"
description = "wt-profile-tool contains set of tools used to fetch user profile from the WarThunder server"
authors = ["axiangcoding <axiangcoding@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.5.3"
bbpb = "^1.1.0"
loguru = "^0.7.2"
httpx = "^0.26.0"
fake-useragent = "^1.4.0"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
ruff = "^0.2.0"

[tool.poetry.group.typing]
optional = true

[tool.poetry.group.typing.dependencies]
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
extend-include = ["I", "N", "UP", "B"]
